assets/css/rtl-admin.css
/* ... */
 
.icon-settings
{
  display:block;
  font-weight:bold ; 
  margin-right:5px !important;
}

 .icon-settings:before {
  font-size: 1.4em;
  color: #a6a6a6;
  display:block;
  float:right !important;
}



.advanced-button:hover:before{
  color: #fff!important;
}

button.advanced-button:hover {
 	background: #318ec4;
	background: -webkit-linear-gradient(top,#318ec4 0,#2b7cab 100%);
	background: linear-gradient(to bottom,#318ec4 0,#2b7cab 100%);
	border-color: #2e85b8;
	color: #fff!important;
 }
 
 .sif_others_area
 {
     width:100%;
     float:left !important;
     text-align:left !important;
     margin-left:2% !important;
  
 }
 
 .popup_submit_area
 {
    display:inline-block;
    width:100%;
    position:relative;
    margin-top:20px; 
 }
 
 #addRadio
 {
 	background-color:rgba(255,255,255,0.1);
 }
 #minusRadio
 {
 	background-color:rgba(255,255,255,0.1);
 }
 #addCheckbox
 {
 	background-color:rgba(255,255,255,0.1);
 }
 #minusCheckbox
 {
 	background-color:rgba(255,255,255,0.1);
 }
 
 .icon_plus 
 {
                 position: relative;
                display: inline-block;
                
				margin-top:10px;
				 right: 0px;
                 width: 20px;
                height: 20px;
                cursor: pointer;
				font-weight:bold ; 
				border:1px solid black ;
 }
 .icon_minus
 {
                 position: relative;
                display: inline-block;
				margin-top:10px;
				margin-right:5px !important;
                left: 0px !important;
                width: 20px;
                height: 20px;
                font-weight:bold ; 
                cursor: pointer;
                border:1px solid black ;
				
 }
 
 .esig-default 
 {
    font-style:italic;
    font-size:smaller;
 }
 
 .sif-advanced-text
 {
     text-align:justify;
 }
 .sif_alignment {
   margin-top:4%;
}
 /* shortcode style end here */
  .textbox_button {
     text-align:center ;
	 margin:10px 0px 0px 0px ;
	 border:1px solid red ;
  }
  
 .esig-sif-panel-textfield  p{
position:relative ; margin:5px;
  text-align:center;
 }
  
.esig_sif-popup p .esig-sif-instructions{
	font-size: 19px;
	width: 80%;
	color: #666;
	font-weight: 300;
	text-align: center;	
}

#removecheckbox {
 width:100% ;
 position:relative;
 display: block;
}

/* Signer select message box style */
.esig-sif-signer-message{
	margin: 28px 0;
	padding: 10px 28px;
	border-radius: 5px;
	border: 3px solid #ec6a38;
	font-size: 14px;
	font-weight: 400;
	color: #ec6a38;
}

/*textarea style */
.esig-sif-textarea-style
{
    border-radius:5px; 
    padding:8px 14px ;
    margin:10px 0;
    -webkit-border-radius:5px;
    -moz-border-radius:5px; 
}

.area-small
{
    height:5em;
    width:99.5%;
    border-radius:5px; 
    padding:8px 14px ;
    margin:10px 0;
    -webkit-border-radius:5px;
    -moz-border-radius:5px; 
}
.area-medium
{
    height:9.375em;
    width:99.5%;
     border-radius:5px; 
    padding:8px 14px ;
    margin:10px 0;
    -webkit-border-radius:5px;
    -moz-border-radius:5px; 
}
.area-big
{
    height:15.625em;
    width:99.5%;
     border-radius:5px; 
    padding:8px 14px ;
    margin:10px 0;
    -webkit-border-radius:5px;
    -moz-border-radius:5px; 
}
#text_field_display_type,#text_area_display_type{
    text-align: right;
    float:right;
}
.popup_submit_area{
    text-align: right;
    float: right;
    direction: rtl;
    
   
  }
  .esig-sif-panel-datepicker,.esig-sif-panel-radio,.esig-sif-panel-checkbox,.esig-sif-panel-dropdown{
      text-align:right;
      float: right;
      direction: rtl;
  }
  #esig_submit_section .esig-left{
    float:right !important;
    text-align: right !important;
    direction: rtl;
  
}


/*
 * new fixes for admin dasboard
 */

 .esign-form-header{
    text-align: right;
 }
 .esig-inside .container-fluid p {
    text-align: right;
}
.esig-section-title {
    text-align: right;
}
.esig-inside .tooltip {
    float: right;
    margin-left: 20px;
}
.esig-edit-screen-print-pdf-section {
    padding-right: 2%;
    text-align: right;
}
.sad-page-auto-creation-container .sad-auto-section-row {
   
    text-align: right;
   
}
.thickbox-loading{
    margin-top: 0px !important;
}
#page-loader-admin
{
    right:25% !important;

}

.esig-postbox-container{
    float: left !important;
}
#esig-settings-col2,.esig-settings-col2 h4 {
    float: right !important;
    text-align: right !important;
   
}

.esig-settings-form td,.esig-settings-form .tooltip {
    
    float: right !important;
}
.esig-access-dialog {
    margin-right: 33% !important;
}
.second-layer{
    right: 10px !important;
}
#recipient_emails #signer_main .text-left {
    text-align: right !important;
}
span.deleteIcon{
    right: 15px !important;
}
#recipient_emails #signer_main .leftPadding-5 {
    padding-right: 5px !important;   
}
.form-inline .container-fluid .row{
    margin-right:0px;
}
.ui-dialog.ui-corner-all.ui-widget.ui-widget-content.ui-front.esig-access-dialog.ui-draggable.ui-resizable {
    margin-right: 35% !important;
}
#submit_send_layer {
    left: 25px;
}

